@@ -57,12 +57,12 @@
 		<dependency>
 			<groupId>com.qubit.solution.fenixedu</groupId>
 			<artifactId>fenixedu-academic-core</artifactId>
-			<version>31.0.0</version>
+			<version>32.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-academic-extensions</artifactId>
-			<version>4.11.3</version>
+			<version>4.11.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
