@@ -1,3 +1,5 @@
+- Refactor: Upgrade dependency of fenixedu-academic-core (cleanup deprecated execution course slots and methods)
+
 6.21.0 (09-11-2020)
 - New feature: Added isBlueRecordAnswered to PersonUlisboaSpecificationsByExecutionYear
 
